--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^19.1.0",
     "react-icon": "^1.0.0",
     "react-icons": "^5.5.0",
+    "react-inner-image-zoom": "^4.0.1",
     "react-router-dom": "^7.6.2",
     "swiper": "^11.2.8"
   },
